// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccessLanguage Component renders component correctly 1`] = `
<div>
  <section
    class="flex flex-col gap-4"
  />
  <form
    action="/api/form-handler"
    aria-label="form"
    class="pt-6 md:pt-8 lg:max-w-md"
    method="POST"
    novalidate=""
  >
    <input
      name="lang"
      type="hidden"
      value=""
    />
    <input
      name="nextStep"
      type="hidden"
      value="self-employed-pre-appointment"
    />
    <div
      class="pb-6 md:pb-8"
    >
      <div
        class=""
        data-testid="errors"
      >
        <div
          class="relative block focus-within:rounded focus-within:ring-[3px] focus-within:ring-yellow-400 focus-within:ring-offset-4 focus-within:ring-offset-blue-700"
        >
          <span
            class="absolute inset-y-0 right-0 flex items-center w-10 pl-1 pr-1 text-white bg-magenta-500 rounded-r pointer-events-none print:hidden shadow-bottom-gray focus:shadow-none"
          >
            <svgr-mock
              classname="h-full"
            />
          </span>
          <select
            class="border-gray-400 border-y border-l print:p-1 text-gray-500 appearance-none w-full block text-md h-10 pl-3 pr-12 bg-white rounded tool-dd outline-none focus:outline-none focus:border-white"
            name="accessLanguageType"
          >
            <option
              disabled=""
              selected=""
              value=""
            >
              Please choose an item
            </option>
            <option
              value="mock-value"
            >
              mock-text
            </option>
          </select>
        </div>
      </div>
      <div
        class="mt-8"
      >
        <div
          class=""
          data-testid="errors"
        >
          <label
            class="block pb-2 text-lg"
            for="accessLanguageOther"
          >
            components.access-language.form.language-other.label
          </label>
          <input
            aria-invalid="false"
            class="px-3 m-px w-full h-10 rounded border focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-gray-400"
            data-testid="input-access-language-other"
            id="accessLanguageOther"
            name="accessLanguageOther"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button w-full my-8 md:w-auto"
      data-testid="form-button"
      type="submit"
    >
      <span />
      common.form.button.continue-text
      <span />
    </button>
  </form>
</div>
`;

exports[`AccessLanguage Component renders component textArea error correctly 1`] = `
<div>
  <section
    class="flex flex-col gap-4"
  />
  <form
    action="/api/form-handler"
    aria-label="form"
    class="pt-6 md:pt-8 lg:max-w-md"
    method="POST"
    novalidate=""
  >
    <input
      name="lang"
      type="hidden"
      value=""
    />
    <input
      name="nextStep"
      type="hidden"
      value="self-employed-pre-appointment"
    />
    <div
      class="pb-6 md:pb-8"
    >
      <div
        class="border-0 border-l-4 pl-5 border-red-600 border-solid"
        data-testid="errors"
      >
        <div
          class="relative block focus-within:rounded focus-within:ring-[3px] focus-within:ring-yellow-400 focus-within:ring-offset-4 focus-within:ring-offset-blue-700 outline outline-2 outline-red-700 rounded-[4px] focus-within:outline-none"
        >
          <span
            class="absolute inset-y-0 right-0 flex items-center w-10 pl-1 pr-1 text-white bg-magenta-500 rounded-r pointer-events-none print:hidden shadow-bottom-gray focus:shadow-none"
          >
            <svgr-mock
              classname="h-full"
            />
          </span>
          <select
            class="false print:p-1 text-gray-500 appearance-none w-full block text-md h-10 pl-3 pr-12 bg-white rounded tool-dd outline-none focus:outline-none focus:border-white"
            name="accessLanguageType"
          >
            <option
              disabled=""
              selected=""
              value=""
            >
              Please choose an item
            </option>
            <option
              value="mock-value"
            >
              mock-text
            </option>
          </select>
        </div>
      </div>
      <div
        class="mt-8"
      >
        <div
          class="border-0 border-l-4 pl-5 border-red-600 border-solid"
          data-testid="errors"
        >
          <label
            class="block pb-2 text-lg"
            for="accessLanguageOther"
          >
            components.access-language.form.language-other.label
          </label>
          <p
            class="mb-4 break-words text-red-700"
            data-testid="accessLanguageOther-error"
            id="accessLanguageOther-error"
          >
            components.access-language.form.language-other.error
          </p>
          <input
            aria-describedby="accessLanguageOther-error"
            aria-invalid="true"
            class="px-3 m-px w-full h-10 rounded focus:outline-none focus:shadow-focus-outline tool-field focus:border-1 focus:border-blue-700 border-red-700 border-2"
            data-testid="input-access-language-other"
            id="accessLanguageOther"
            name="accessLanguageOther"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button w-full my-8 md:w-auto"
      data-testid="form-button"
      type="submit"
    >
      <span />
      common.form.button.continue-text
      <span />
    </button>
  </form>
</div>
`;
